--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Norbert Orzechowicz",
-            "email": "norbert@orzechowicz.pl"
+            "name": "Francisco Abayon",
+            "email": "franz.noyaba@gmail.com"
         }
     ],
     "autoload": {
@@ -19,9 +19,16 @@
             "": "tests"
         }
     },
+        "repositories":
+    [
+            {
+                "type": "vcs",
+                "url": "https://github.com/cocoytech/client"
+            }
+    ],
     "require": {
-        "monolog/monolog": "^1.1",
-        "app-insights-php/client": "^0.2.3"
+        "monolog/monolog": "^1.7",
+        "app-insights-php/client": "dev-master as 0.2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.1 || ^8.0"
